--- a/project.qmd
+++ b/project.qmd
@@ -52,7 +52,7 @@ There are intermediate milestones and peer review assignments throughout the sem
 
 The goal of this milestone is to discuss topics and develop potential research questions your team is interested in investigating for the project. You are only developing potential research questions; you do not need to have a data set identified at this point.
 
-Develop three potential topics and research questions. Include the following for each question:
+Develop three potential research questions. Include the following for <u>each</u> question:
 
 1.  A statement of the research question.
 2.  The target population of interest for this question.
@@ -65,113 +65,83 @@ Write your responses in `research-questions.qmd` in your team's project GitHub r
 
 ## Project proposal {#project-proposal}
 
-<!-- ::: callout-important -->
+The purpose of the project proposal is for your team to identify the data set you're interested in analyzing to investigate one of your potential research questions. You will also do some preliminary exploration of the response variable and begin thinking about the modeling strategy. If you're unsure where to find data, you can use the list of potential data sources on the [Tips + resources](https://sta221-fa24.netlify.app/project-tips) page as a starting point.
 
-<!-- ## Due dates -->
+The data set must meet the following criteria:
 
-<!-- -   Friday, October 27 (Tuesday labs) -->
+-    At least 500 observations
 
-<!-- -   Sunday, October 29 (Thursday labs) -->
+-   At least 10 columns, such that at least 6 of the columns are useful and unique predictor variables.
 
-<!-- ::: -->
+    -   e.g., identifier variables such as "name", "ID number", etc. are \[not\]{.underline} useful predictor variables.
 
-<!-- The purpose of the project proposal is for your team to identify the data set you're interested in analyzing for the project, do some preliminary exploratory data analysis, and begin to think about a modeling strategy . If you're unsure where to find data, you can use the list of potential data sources on the [Tips + resources](project-tips.qmd) page as a starting point. It may also help to think of topics you're interested in investigating and find data sets on those topics. -->
+    -   e.g., if you have multiple columns with the same information (e.g. "state abbreviation" and "state name"), then they are not unique predictors.
 
-<!-- The data set must meet the following criteria: -->
+-   At least one variable that can be identified as a reasonable response variable.
 
-<!-- -   At least 500 observations -->
+    -   The response variable can be quantitative or categorical.
 
-<!-- -   At least 10 columns, such that at least 6 of the columns are useful and unique predictor variables. -->
+-   A mix of quantitative and categorical variables that can be used as predictors.
 
-<!--     -   e.g., identifier variables such as "name", "ID number", etc. are [not]{.underline} useful predictor variables. -->
+-   May not be data that has previously been used in any course materials, or any derivation of data that has been used in course materials.
 
-<!--     -   e.g., if you have multiple columns with the same information (e.g. "state abbreviation" and "state name"), then they are not unique predictors. -->
+::: callout-warning
+###  Types of data sets to avoid
 
-<!-- -   At least one variable that can be identified as a reasonable response variable. -->
+-   Data that are likely violate the independence condition. Therefore, avoid data with repeated measures, data collected over time, etc.
 
-<!--     -   The response variable can be quantitative or categorical. -->
+-   Data sets in which there is no information about how the data were originally collected
 
-<!-- -   A mix of quantitative and categorical variables that can be used as predictors. -->
+-   Data sets in which there are missing or unclear definitions about the observations and/or variables
+:::
 
-<!-- -   May not be data that has previously been used in any course materials, or any derivation of data that has been used in course materials. -->
+**Ask a member of the teaching team if you're unsure whether your data set meets the criteria.**
 
-<!-- ::: callout-warning -->
+The proposal will include the following sections:
 
-<!-- ## Types of data sets to avoid -->
+### Section 1: Introduction
 
-<!-- -   Data that are likely violate the independence condition. Therefore, avoid data with repeated measures, data collected over time, etc. -->
+::: callout-tip
+Reuse and iterate on the work from the Research Questions milestone.
+:::
 
-<!-- -   Data sets in which there is no information about how the data were originally collected -->
+-   An introduction to the subject matter you're investigating (citing any relevant literature)
 
-<!-- -   Data sets in which there are missing or unclear definitions about the observations and/or variables -->
+-   Statement of a well-developed research question.
 
-<!-- ::: -->
+-   The motivation for your research question and why it is important
 
-<!-- **Ask a member of the teaching team if you're unsure whether your data set meets the criteria.** -->
+-   Your team's hypotheses regarding the research question
 
-<!-- The proposal will include the following sections: -->
+    -   This is a narrative about what you think regarding the research question, not formal statistical hypotheses.
 
-<!-- ### Section 1: Introduction -->
+### Section 2: Data description 
 
-<!-- The introduction section includes -->
+-   The source of the data set
 
-<!-- -   an introduction to the subject matter you're investigating (citing any relevant literature) -->
+-   A description of when and how the data were originally collected (by the original data curator, not necessarily how you found the data)
 
-<!-- -   the motivation for your research question (citing any relevant literature) -->
+-   A description of the observations and general characteristics being measured --\>
 
-<!-- -   the primary research question you are interested in exploring -->
+### Section 3: Initial exploratory data analysis 
 
-<!-- -   your team's hypotheses regarding the research question -->
+-   Description of data cleaning you need to do to prepare for analysis (can focus on the response variable for now), such as joining data sets, imputing missing values, variable transformation, creating a new variable, etc.
 
-<!--     -   This is a narrative about what you think regarding the research question, not formal statistical hypotheses. -->
+-   Visualizations, summary statistics, and narrative to describe the distribution of the response variable.
 
-<!-- ### Section 2: Data description -->
+### Section 4: Analysis approach
 
-<!-- The data description section includes -->
+-   a description of the potential predictor variables of interest
 
-<!-- -   the source of the data set -->
+-   regression model technique (multiple linear regression or logistic regression for a categorical response variable
 
-<!-- -   a description of when and how the data were originally collected (by the original data curator, not necessarily how you found the data) -->
+### Data dictionary (aka code book) 
 
-<!-- -   a description of the observations and general characteristics being measured -->
+Submit a data dictionary for all the variables in your data set in the `README` of the `data` folder. You do <u>not</u> need to include the data dictionary in the PDF document.
 
-<!-- ### Section 3: Initial exploratory data analysis -->
+### Submission
 
-<!-- In this section, you will begin to explore the data. This includes using narrative, visualizations and summary statistics to describe the following: -->
-
-<!-- -   distribution of the response variable -->
-
-<!-- -   distributions of one potential quantitative predictor variable and one potential categorical predictor variable -->
-
-<!-- -   the relationships between the response variable and each of the predictors from the previous step -->
-
-<!-- -   a potential interaction effect you're interested in exploring (it doesn't have to be an interaction with the two predictors from above) -->
-
-<!-- These steps are to help get you started on exploratory data analysis and will not be the complete EDA for the final report. The requirements above are minimum requirements, but your group is welcome to include more at this stage. -->
-
-<!-- In this section, you will also describe any data cleaning you need to do to prepare for modeling, such as imputing missing values, collapsing levels for categorical predictors, creating new variables, summarizing data, etc. -->
-
-<!-- ### Section 4: Analysis approach -->
-
-<!-- In this section, you will provide a brief overview of your analysis approach. This includes -->
-
-<!-- -   a description of the response variable and list of all potential predictors -->
-
-<!-- -   regression model technique (multiple linear regression or logistic regression) -->
-
-<!-- ### Data dictionary (aka code book) -->
-
-<!-- Submit a data dictionary for all the variables in your data set in the `README` of the `data` folder. You do [not]{.underline} need to include the data dictionary in the PDF document. -->
-
-<!-- ### Submission -->
-
-<!-- ::: callout-important -->
-
-<!-- Write your narrative and analysis for Sections 1 - 4 in the `proposal.qmd` file. Put the data set and the data dictionary in the `data` folder. -->
-
-<!-- Submit the PDF of the proposal to Gradescope. Mark all pages of the document. -->
-
-<!-- ::: -->
+Write your narrative and analysis for Sections 1 - 4 in the `proposal.qmd` file in your team's GitHub repo. Put the data set and the data dictionary in the `data` folder in the repo. Push the qmd and rendered pdf documents to GitHub by the deadline, **Thursday, October 3 at 11:59pm.**
 
 <!-- ### Grading -->
 
@@ -189,7 +159,113 @@ Write your responses in `research-questions.qmd` in your team's project GitHub r
 
 ## Exploratory data analysis {#eda}
 
-## Analysis + peer review {#draft-report-peer-review} 
+::: callout-tip
+Reuse and iterate on the work from the previous milestones.
+:::
+
+The purpose of this milestone is begin exploring the data and get early feedback on your data and analysis. You will submit a draft of the beginning of your report that includes the introduction and exploratory data analysis, with an emphasis on the EDA. It will also help you prepare for the presentation of the exploratory data analysis results.
+
+Below is a brief description of the sections to include in this step:
+
+### Introduction 
+
+This section includes an introduction to the project motivation, background, data, and research question.
+
+### Exploratory data analysis
+
+This section includes the following:
+
+-   Description of the data set and key variables.
+
+-   Exploratory data analysis of the response variable and key predictor variables.
+
+    -   Univariate EDA of the response and key predictor variables.
+    -   Bivariate EDA of the response and key predictor variables
+    -   Potential interaction effects.
+
+### Submission 
+
+Write your draft introduction and exploratory data analysis in the `written-report.qmd` file in your team's GitHub repo. Push the qmd and rendered pdf documents to GitHub by the deadline, **Thursday, October 31 at 11:59pm.**
+
+## Presentation {#presentation}
+
+<!-- ::: callout-important -->
+
+<!-- Presentations will take place in class during labs December 5 & 7. -->
+
+<!-- [Click here](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/Ed8d7gVI8-lMrmgJpFpTEjYB2UXUTyZNDMOgQYpO4YOJJg?e=CieZZL) for the presentation order. -->
+
+<!-- ::: -->
+
+<!-- In addition to the written report, your team will also do an in-person presentation that summarize and showcase your project. Introduce your research question and data set, showcase visualizations, and discuss the primary conclusions. The presentation should be supported by slides that serve as a brief visual addition to the presentation. The presentation and slides will be graded for content and clarity. -->
+
+<!-- You can create your slides with any software you like (Keynote, PowerPoint, Google Slides, etc.). We recommend choosing an option that's easy to collaborate with, e.g., Google Slides. -->
+
+<!-- You can also use Quarto to make your slides! While we won't be covering making slides with Quarto in the class, we would be happy to help you with it in office hours. It's no different than writing other documents with Quarto, so the learning curve will not be steep! -->
+
+<!-- **The presentation must be no longer than 6 minutes.** It is fine if the presentation is shorter than 6 minutes, but it cannot exceed 6 minutes due to the limited time during lab. -->
+
+<!-- **Every team member is expected to speak in the presentation.** Part of the grade will be whether every team member had a meaningful speaking role in the presentation. -->
+
+<!-- ### Slides -->
+
+<!-- The slide deck should have no more than 6 content slides + 1 title slide. Here is a [suggested]{.underline} outline as you think through the slides; you do [not]{.underline} have to use this exact format for the 6 slides. -->
+
+<!-- -   Title Slide -->
+
+<!-- -   Slide 1: Introduce the topic and motivation -->
+
+<!-- -   Slide 2: Introduce the data -->
+
+<!-- -   Slide 3: Highlights from EDA -->
+
+<!-- -   Slide 4: Final model -->
+
+<!-- -   Slide 5: Interesting findings from the model -->
+
+<!-- -   Slide 6: Conclusions + future work -->
+
+<!-- ### Grading criteria -->
+
+<!-- The presentation grade will be based on the following criteira: -->
+
+<!-- -   Content: The group told a unified story using the appropriate regression analysis. -->
+
+<!-- -   Slides: The presentation slides were organized, included clear and informative visualizations, and were easily readable. -->
+
+<!-- -   Professionalism: The group's communication style was clear and professional. -->
+
+<!-- -   Time Management: Team divided the time well and stayed within the 6 minute time limit, with each team member making a meaning contribution to the presentation. (assessed by the teaching team only). -->
+
+<!-- 80% of the presentation grade will be the average of the teaching scores and 20% will be the average of the peer scores. -->
+
+<!-- ::: callout-important -->
+
+<!-- You can submit the presentation slides in two ways: -->
+
+<!-- -   Put a PDF of the slides in the `presentation` folder in your team's GitHub repo. -->
+
+<!-- -   Put the URL to your slides in the `README` of the `presentation` folder. If you share the URL, please make sure permissions are set so Prof. Tackett can view the slides. -->
+
+<!-- **Slides must be submitted by the start of your lab on December 5 or 7.** You will [not]{.underline} submit the slides on Gradescope. -->
+
+<!-- ::: -->
+
+<!-- ## **Presentation comments** {#presentation-comments} -->
+
+<!-- ::: callout-important -->
+
+<!-- [Click here](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/Ed8d7gVI8-lMrmgJpFpTEjYB2UXUTyZNDMOgQYpO4YOJJg?e=jxx4e4) to find the teams you're scoring and a link to the feedback form. -->
+
+<!-- This portion of the project will be assessed individually. -->
+
+<!-- ::: -->
+
+<!-- You will provide feedback on two teams' presentations. You can find your assigned teams and the link to the feedback from [here](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/Ed8d7gVI8-lMrmgJpFpTEjYB2UXUTyZNDMOgQYpO4YOJJg?e=CieZZL). Please provide all scores and comments by the end of the lab session. There will be a few minutes between each presentation to submit scores. -->
+
+<!-- The grade will be based on submitting the scores and comments for both of your assigned teams by the end of the presentation day (December 5 for Tuesday labs, December 7 for Thursday labs). -->
+
+## Analysis + peer review {#draft-report-peer-review}
 
 <!-- The purpose of the draft and peer review is to give you an opportunity to get early feedback on your analysis. Therefore, the draft and peer review will focus primarily on the exploratory data analysis, modeling, and initial interpretations. -->
 
@@ -279,6 +355,28 @@ Write your responses in `research-questions.qmd` in your team's project GitHub r
 
 <!-- The peer review will be graded on the extent to which it comprehensively and constructively addresses the components of the partner team's report: the research context and motivation, exploratory data analysis, modeling, interpretations, and conclusions. -->
 
+## Round 1 submission (optional) {#round1-submission}
+
+<!-- ::: callout-important -->
+
+<!-- ## Due date -->
+
+<!-- Friday, December 1 at 11:59pm on GitHub (all teams) -->
+
+<!-- Reports submitted after this date will not receive preliminary feedback. -->
+
+<!-- ::: -->
+
+<!-- The Round 1 submission is an opportunity to receive detailed feedback on your analysis and [written report](#written-report) before the final submission. Therefore, to make the feedback most useful, ***you must submit a complete written report to receive feedback.*** You will also be notified of the grade you would receive at that point. You will have the option to keep the grade (and thus you don't need to turn in an updated report) or resubmit the written report by the final submission deadline to receive a new grade. -->
+
+<!-- #### **To submit the Round 1 submission:** -->
+
+<!-- 1.  Push the updated `written-report.qmd` and `written-report.pdf` to your GitHub repo. -->
+
+<!-- 2.  Open an issue with the title "Round 1 Submission". You can use the template issue in the GitHub repo. Make sure I am tagged in the issue (`@matackett`), so I receive an email notification of your Round 1 submission. See [Creating an issue from a repository](https://docs.github.com/en/issues/tracking-your-work-with-issues/creating-an-issue#creating-an-issue-from-a-repository) for instructions on opening an issue. Please ask a member of the teaching team for assistance if you need help opening the issue. -->
+
+<!-- Note that this is optional, so there is [**no**]{.underline}grade penalty for not turning in a Round 1 submission. Due to time constraints at the end of the semester, only high-level feedback will be given for the reports submitted at the final written report deadline on December 13. -->
+
 ## Written report {#written-report}
 
 <!-- Your written report must be completed in the `written-report.qmd` file and must be reproducible. All team members should contribute to the GitHub repository, with regular meaningful commits. -->
@@ -346,106 +444,6 @@ Write your responses in `research-questions.qmd` in your team's project GitHub r
 <!-- *The version of the report in the repo by Wednesday, December 13 will be the one that is graded.* -->
 
 <!-- ::: -->
-
-## Round 1 submission (optional) {#round1-submission}
-
-<!-- ::: callout-important -->
-
-<!-- ## Due date -->
-
-<!-- Friday, December 1 at 11:59pm on GitHub (all teams) -->
-
-<!-- Reports submitted after this date will not receive preliminary feedback. -->
-
-<!-- ::: -->
-
-<!-- The Round 1 submission is an opportunity to receive detailed feedback on your analysis and [written report](#written-report) before the final submission. Therefore, to make the feedback most useful, ***you must submit a complete written report to receive feedback.*** You will also be notified of the grade you would receive at that point. You will have the option to keep the grade (and thus you don't need to turn in an updated report) or resubmit the written report by the final submission deadline to receive a new grade. -->
-
-<!-- #### **To submit the Round 1 submission:** -->
-
-<!-- 1.  Push the updated `written-report.qmd` and `written-report.pdf` to your GitHub repo. -->
-
-<!-- 2.  Open an issue with the title "Round 1 Submission". You can use the template issue in the GitHub repo. Make sure I am tagged in the issue (`@matackett`), so I receive an email notification of your Round 1 submission. See [Creating an issue from a repository](https://docs.github.com/en/issues/tracking-your-work-with-issues/creating-an-issue#creating-an-issue-from-a-repository) for instructions on opening an issue. Please ask a member of the teaching team for assistance if you need help opening the issue. -->
-
-<!-- Note that this is optional, so there is [**no**]{.underline}grade penalty for not turning in a Round 1 submission. Due to time constraints at the end of the semester, only high-level feedback will be given for the reports submitted at the final written report deadline on December 13. -->
-
-## Presentation {#presentation} 
-
-<!-- ::: callout-important -->
-
-<!-- Presentations will take place in class during labs December 5 & 7. -->
-
-<!-- [Click here](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/Ed8d7gVI8-lMrmgJpFpTEjYB2UXUTyZNDMOgQYpO4YOJJg?e=CieZZL) for the presentation order. -->
-
-<!-- ::: -->
-
-<!-- In addition to the written report, your team will also do an in-person presentation that summarize and showcase your project. Introduce your research question and data set, showcase visualizations, and discuss the primary conclusions. The presentation should be supported by slides that serve as a brief visual addition to the presentation. The presentation and slides will be graded for content and clarity. -->
-
-<!-- You can create your slides with any software you like (Keynote, PowerPoint, Google Slides, etc.). We recommend choosing an option that's easy to collaborate with, e.g., Google Slides. -->
-
-<!-- You can also use Quarto to make your slides! While we won't be covering making slides with Quarto in the class, we would be happy to help you with it in office hours. It's no different than writing other documents with Quarto, so the learning curve will not be steep! -->
-
-<!-- **The presentation must be no longer than 6 minutes.** It is fine if the presentation is shorter than 6 minutes, but it cannot exceed 6 minutes due to the limited time during lab. -->
-
-<!-- **Every team member is expected to speak in the presentation.** Part of the grade will be whether every team member had a meaningful speaking role in the presentation. -->
-
-<!-- ### Slides -->
-
-<!-- The slide deck should have no more than 6 content slides + 1 title slide. Here is a [suggested]{.underline} outline as you think through the slides; you do [not]{.underline} have to use this exact format for the 6 slides. -->
-
-<!-- -   Title Slide -->
-
-<!-- -   Slide 1: Introduce the topic and motivation -->
-
-<!-- -   Slide 2: Introduce the data -->
-
-<!-- -   Slide 3: Highlights from EDA -->
-
-<!-- -   Slide 4: Final model -->
-
-<!-- -   Slide 5: Interesting findings from the model -->
-
-<!-- -   Slide 6: Conclusions + future work -->
-
-<!-- ### Grading criteria -->
-
-<!-- The presentation grade will be based on the following criteira: -->
-
-<!-- -   Content: The group told a unified story using the appropriate regression analysis. -->
-
-<!-- -   Slides: The presentation slides were organized, included clear and informative visualizations, and were easily readable. -->
-
-<!-- -   Professionalism: The group's communication style was clear and professional. -->
-
-<!-- -   Time Management: Team divided the time well and stayed within the 6 minute time limit, with each team member making a meaning contribution to the presentation. (assessed by the teaching team only). -->
-
-<!-- 80% of the presentation grade will be the average of the teaching scores and 20% will be the average of the peer scores. -->
-
-<!-- ::: callout-important -->
-
-<!-- You can submit the presentation slides in two ways: -->
-
-<!-- -   Put a PDF of the slides in the `presentation` folder in your team's GitHub repo. -->
-
-<!-- -   Put the URL to your slides in the `README` of the `presentation` folder. If you share the URL, please make sure permissions are set so Prof. Tackett can view the slides. -->
-
-<!-- **Slides must be submitted by the start of your lab on December 5 or 7.** You will [not]{.underline} submit the slides on Gradescope. -->
-
-<!-- ::: -->
-
-<!-- ## **Presentation comments** {#presentation-comments} -->
-
-<!-- ::: callout-important -->
-
-<!-- [Click here](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/Ed8d7gVI8-lMrmgJpFpTEjYB2UXUTyZNDMOgQYpO4YOJJg?e=jxx4e4) to find the teams you're scoring and a link to the feedback form. -->
-
-<!-- This portion of the project will be assessed individually. -->
-
-<!-- ::: -->
-
-<!-- You will provide feedback on two teams' presentations. You can find your assigned teams and the link to the feedback from [here](https://prodduke-my.sharepoint.com/:x:/g/personal/mt324_duke_edu/Ed8d7gVI8-lMrmgJpFpTEjYB2UXUTyZNDMOgQYpO4YOJJg?e=CieZZL). Please provide all scores and comments by the end of the lab session. There will be a few minutes between each presentation to submit scores. -->
-
-<!-- The grade will be based on submitting the scores and comments for both of your assigned teams by the end of the presentation day (December 5 for Tuesday labs, December 7 for Thursday labs). -->
 
 ## Reproducibility + organization {#reproducibility-organization}
 
